styles.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&display=swap');

body {
    font-family: 'Open Sans', sans-serif;

    width: 50%;
    margin: auto;
}

@media only screen and (max-device-width: 720px) {
    body {
        width: 100%;
        padding: 0 10px;
    }
}

img {
    width: 100%;
}

code {
    white-space: pre-wrap;       /* Since CSS 2.1 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
}

h1 {
    text-transform: uppercase;

    font-size: 1.7em;
}

h2 {
    font-size: 1.3em;
}

strong {
    font-size: 1em;
}

.emphasis {
    font-style: italic;
    text-align: right;

    font-size: 0.8em;

    margin: 10px 0 30px 0;
}

